Connect live Instagram feed via Behold (sukha.pku)

--- a/index.html
+++ b/index.html
@@ -959,8 +959,8 @@
             <a href="https://www.instagram.com/sukha.pku/" target="_blank" rel="noopener noreferrer" class="insta-handle">@sukha.pku</a>
         </div>
 
-        <!-- Live feed: paste your Behold Widget ID below -->
-        <behold-widget feed-id="YOUR_FEED_ID"></behold-widget>
+        <!-- Live Instagram feed via Behold.so -->
+        <behold-widget feed-id="KP6RF1ZfoaJlNHmQKOqQ"></behold-widget>
 
         <!-- Fallback static grid — shows until YOUR_FEED_ID is set -->
         <div class="insta-grid insta-fallback">
