Add photo1.jpg to gallery slot 1

--- a/index.html
+++ b/index.html
@@ -934,7 +934,7 @@
             <h2 class="heading" style="font-size: clamp(40px, 5.5vw, 72px);">GALLERY.</h2>
         </div>
         <div class="gallery-grid" role="list" aria-label="Photo gallery">
-            <div class="gallery-item" role="listitem"><div class="gallery-face g1"></div></div>
+            <div class="gallery-item" role="listitem"><img src="photo1.jpg" alt="" class="gallery-face" style="object-fit:cover;width:100%;height:100%;"></div>
             <div class="gallery-item" role="listitem"><div class="gallery-face g2"></div></div>
             <div class="gallery-item" role="listitem"><div class="gallery-face g3"></div></div>
             <div class="gallery-item" role="listitem"><div class="gallery-face g4"></div></div>
