--- a/index.html
+++ b/index.html
@@ -945,7 +945,7 @@
         <div class="gallery-grid" role="list" aria-label="Photo gallery">
             <div class="gallery-item" role="listitem"><img src="photo1.jpg" alt="" class="gallery-face" style="object-fit:cover;width:100%;height:100%;"></div>
             <div class="gallery-item" role="listitem"><img src="photo2.jpg" alt="" class="gallery-face" style="object-fit:cover;width:100%;height:100%;"></div>
-            <div class="gallery-item" role="listitem"><img src="photo3.JPG" alt="" class="gallery-face" style="object-fit:cover;width:100%;height:100%;"></div>
+            <div class="gallery-item" role="listitem"><img src="photo3.jpg" alt="" class="gallery-face" style="object-fit:cover;width:100%;height:100%;"></div>
             <div class="gallery-item" role="listitem"><img src="photo4.jpg" alt="" class="gallery-face" style="object-fit:cover;width:100%;height:100%;"></div>
             <div class="gallery-item" role="listitem"><img src="photo5.jpg" alt="" class="gallery-face" style="object-fit:cover;width:100%;height:100%;"></div>
             <div class="gallery-item" role="listitem"><img src="photo6.jpg" alt="" class="gallery-face" style="object-fit:cover;width:100%;height:100%;"></div>
